<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:padding="16dp"
    tools:context="com.example.tkkil.phuot.Activities.RegisterActivity">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/linear1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/logo_hutech"
        android:src="@drawable/logo_hutech" />
    <android.support.v7.widget.CardView
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edtFull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_account_box_black_24dp"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:padding="16dp" />
            <EditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_person_outline_black_24dp"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="16dp" />
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="16dp" />
            <EditText
                android:id="@+id/edtPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn_danger"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/txtvBack"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_sign_in"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="italic"/>
    </LinearLayout>
</RelativeLayout>
