<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:padding="16dp"
    tools:context="com.example.tkkil.phuot.Activities.LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/linear1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/logo_hutech"
        android:src="@drawable/logo_hutech" />

    <android.support.v7.widget.CardView
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="16dp" />

            <EditText
                android:id="@+id/edtPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/txtvForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:padding="10dp"
        android:text="@string/forgot_a_password"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn_primary"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/i_don_t_have_an_account_sign_up"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>
</RelativeLayout>
