<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context="com.example.tkkil.phuot.Activities.ChangeInformationActivity">
    <android.support.v7.widget.Toolbar
        app:navigationIcon="@drawable/ic_chevron_left_black_24dp"
        app:title="Change Information"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:subtitleTextColor="@android:color/white"
        android:theme="@style/arrow"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="@android:color/white" />
    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:layout_centerInParent="true"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_account_box_black_24dp"
                    android:hint="@string/fullname"
                    android:inputType="textPersonName"
                    android:padding="16dp" />
                <EditText
                    android:id="@+id/edtBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_cake_black_24dp"
                    android:hint="@string/birthday"
                    android:inputType="datetime"
                    android:padding="16dp" />
                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_phone_black_24dp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:padding="16dp" />
                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_home_black_24dp"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:padding="16dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <Button
            android:layout_alignParentBottom="true"
            android:id="@+id/btnChangeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn_danger"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/change_information"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>
