<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.tkkil.phuot.Activities.ChangePasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/arrow"
        app:navigationIcon="@drawable/ic_chevron_left_black_24dp"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:subtitleTextColor="@android:color/white"
        app:title="Change Password"
        app:titleTextColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtOldPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:padding="16dp" />

                <EditText
                    android:id="@+id/edtNewPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="16dp" />

                <EditText
                    android:id="@+id/edtRePwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:hint="@string/re_password"
                    android:inputType="textPassword"
                    android:padding="16dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:layout_alignParentBottom="true"
            android:id="@+id/btnChangePwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn_danger"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/change_password"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>
